trunk/Archive2/48/33e6b72ea3ad0b/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
main.cpp:6:28: error: initializer-string for char array is too long
    char* p = new char[6]{ "Zorro" };
                           ^~~~~~~
1 error generated.
g++ (GCC) 5.2.0
main.cpp: In function 'int main()':
main.cpp:6:36: error: invalid conversion from 'const char*' to 'char' [-fpermissive]
     char* p = new char[6]{ "Zorro" };
                                    ^
main.cpp:4:16: warning: unused variable 'c' [-Wunused-variable]
     const char c[6]{ "Zorro" };
                ^
