trunk/Archive2/48/33e6b72ea3ad0b/main.cpp

int main()
{
    const char c[6]{ "Zorro" };
    
    char* p = new char[6]{ "Zorro" };
    
    return !p ; 
}
